syntax = "proto3";

package com.hmproductions.bingo;
option java_multiple_files = true;

import "actions/GetGridSize.proto";

service BingoActionService {
    rpc GetGridSize(actions.GetGridSizeRequest) returns (actions.GetGridSizeResponse);
}
